--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,6 +2,8 @@ page-home {
 
 .text-input {
     text-align: center;
+    border: 1px solid black;
+    width: 80%;
 }
 
 .button-inner {
@@ -11,5 +13,6 @@ page-home {
 .scroll-content {
     padding-bottom: 0 !important;
 }
+
 
 }
