--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -14,5 +14,12 @@ page-home {
     padding-bottom: 0 !important;
 }
 
+.content {
+    // background-color: #333399!important;
+}
+
+h1 {
+    // color: #FFFFFF
+}
 
 }
