--- a/src/pages/solution/solution.scss
+++ b/src/pages/solution/solution.scss
@@ -10,4 +10,14 @@ page-solution {
         padding: 0px;
     }
 
+    div {
+        font-weight: bold;
+        text-align: center
+    }
+
+    .header-txt {
+        font-style: italic;
+        font-size: 5vw;
+    }
+
 }
