--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,7 +3,9 @@ page-home {
 .text-input {
     text-align: center;
     border: 1px solid black;
+    border-radius: 10px;
     width: 80%;
+    padding: 0px;
 }
 
 .button-inner {
@@ -21,5 +23,16 @@ page-home {
 h1 {
     // color: #FFFFFF
 }
+
+.btn-input {
+    margin-top: 4vw;
+}
+
+
+ion-select.myCustomSelect{
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+  }
 
 }
